# bikeshare-od-flows

./: .gitignore  README.md  WRITEUP.md  pyproject.toml
docs/: bike_biographies.html  character_map.html  communities_map.html  commute_dipoles_map.html  commuter_gradient_map.html  desire_lines_map.html  flow_map.html  gap_orphans_table.csv  gap_table.csv  index.html  peak_meta.json  peak_moment.html  pulse_map.html  story.html
notebooks/: 01_first_look.ipynb  02_roundtrips.ipynb  03_flow_map.ipynb  04_communities.ipynb  05_station_character.ipynb  06_desire_lines.ipynb  07_desire_lines_vs_infra.ipynb  08_bike_biographies.ipynb  10_gap_vs_plans.ipynb
src/bikeshare/: fetch.py
