[project]
name = "bikeshare-od-flows"
version = "0.1.0"
description = "Exploratory analysis of Bike Share Toronto origin-destination flows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "geopandas>=1.0",
    "jupyterlab>=4.2",
    "networkx>=3.6.1",
    "pandas>=2.2",
    "pyarrow>=17",
    "pydeck>=0.9",
    "requests>=2.32",
    "scipy>=1.17.1",
    "shapely>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bikeshare"]
